go back to reloading page on ws disconnect

--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -66,8 +66,7 @@
     };
     ws.onclose = function () {
         console.log('disconnected');
-        // location.reload();
-        ws = new WebSocket(ws_protocol + location.host + location.pathname + '/ws');
+        location.reload();
     };
     function send_message(action) {
         ws.send(action);
