--- a/abridge/src/player.html
+++ b/abridge/src/player.html
@@ -15,7 +15,7 @@
         } %]</tr>[%
     } %]
 </table>
-[% if Some(self.seat) == self.game.turn() { %]<audio autoplay><source src="your-play.mp3" type="audio/mpeg"></audio>[% } %]
+[% if Some(self.seat) == self.game.turn() { %]<audio autoplay><source src="/your-play.mp3" type="audio/mpeg"></audio>[% } %]
 [% if self.game.hand_done { %]
 <div class="hand[% if Some(North) == self.game.dummy() { %] dummy[% } %]" id="north">
     [% self.get_name(North) %]
