--- a/abridge/src/index.html
+++ b/abridge/src/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>A Bridge Game</title>
+    <title> self.name </title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
