tweak the more visible title

--- a/abridge/src/index.html
+++ b/abridge/src/index.html
@@ -47,7 +47,7 @@
 <body>
     <main>
         <header>
-            <h1> Abridge Game </h1>
+            <h1> A Bridge Game </h1>
         </header>
         <section id="tables">
             [% self.room %]
