--- a/abridge/src/player-page.html
+++ b/abridge/src/player-page.html
@@ -35,8 +35,9 @@
         window.clearTimeout(timer);
         timer = window.setTimeout(function () {
             let name = document.getElementById('myname').innerText;
-            document.cookie = "name=" + name + "; SameSite=Strict; Max-Age=22896000";
-            console.log('setting cookie to', document.cookie);
+            let value = "name=" + name + "; SameSite=Strict; Max-Age=22896000";
+            document.cookie = value;
+            console.log('setting cookie to', document.cookie, value);
             ws.send(JSON.stringify({ "Name": name }));
         }, 1000);
     }
